Ui/fixes late (#3026)
* corner - added avatar

* version dropdown styling

* compositions scroll fix

* truncate corner name

* compositions tabs fix

--- a/extensions/panels/ui/tabs.module.scss
+++ b/extensions/panels/ui/tabs.module.scss
@@ -10,6 +10,7 @@
   text-transform: uppercase;
   font-size: 12px;
   font-weight: bold;
+  outline: none;
 
   color: #878c9a; //TODO
   transition: color 300ms ease-in-out;
